[package]
name = "klend-terminator"
version = "0.2.0-SNAPSHOT"
edition = "2021"
authors = ["Kamino Finance Developers <dev@kamino.finance>"]
description = "A rust klend liquidator"

[[bin]]
name = "klend-terminator"
path = "src/main.rs"

[features]
staging = ["kamino_lending/staging"]

[dependencies]
anchor-client = "0.29.0"
kamino_lending = { git = "https://github.com/Kamino-Finance/klend", default-features = false, features = ["no-entrypoint"] }
anyhow = "1.0.0"
aws-config = "1.1.6"
aws-sdk-sns = "1.15.0"
clap = { version = "3.2.11", features = ["derive", "env", "wrap_help"] }
serde = "1.0.136"
serde_json = "1.0.79"
tracing = "0.1.10"
tracing-subscriber = { version = "0.3.9", features = ["std", "fmt", "json", "env-filter"] }
tokio = "1.14.1"
warp = "0.3.3"
nohash-hasher = "0.2.0"
orbit-link = { git = "https://github.com/Kamino-Finance/orbit-link" }
async-trait = "0.1.51"
futures = "0.3.18"
colored = "2.0.4"
urlencoding = "2.1.3"
bytemuck = { version="1.4.0", features=["min_const_generics", "derive"] }
anchor-lang = "0.29.0"
anchor-spl = { version = "0.29.0", features = ["dex", "token"] }
num_enum = "0.5.0"
scope = { git = "https://github.com/Kamino-Finance/scope", branch = "anchor_0.29_idl", package = "scope-types" }
strum = { git = "https://github.com/hubbleprotocol/strum", features = [
    "derive",
], branch = "checked_arithmetics" }
solana-account-decoder = "~1.17.18"
solana-rpc-client = "~1.17.18"
solana-sdk = "~1.17.18"
solana-program-test = "~1.17.18"
spl-associated-token-account = "1.1.3"
arrayref = "0.3.6"
derive_builder = "0.12.0"
thiserror = "1.0.0"
farms = { git = "https://github.com/Kamino-Finance/kfarms", default-features = false, features = ["no-entrypoint"] }
static-pubkey = "1.0.3"
spl-token = "3.5.0"
juno = { git = "https://github.com/Kamino-Finance/juno" }
dotenvy = "0.15.7"
spl-token-client = "0.7.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
fixed = "1.27.0"
